now returns just one set of x, y, z, by concatenating centrals and satellites

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -56,34 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "557e35fc-a6de-4c66-8173-8ebeba519bb8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([-58.269783, -58.085327, -58.388054, ..., 822.255   , 822.77826 ,\n",
-       "        822.3056  ], dtype=float32),\n",
-       " array([ 999.405  , -998.28827, -996.64233, ...,  987.9647 ,  994.8288 ,\n",
-       "         997.69037], dtype=float32),\n",
-       " array([ -97.82207 ,  -23.158543,  665.42957 , ..., -459.02484 ,\n",
-       "         374.75842 , -415.7269  ], dtype=float32),\n",
-       " array([-58.508, -58.264, -58.258, ..., 822.01 , 822.392, 822.8  ],\n",
-       "       dtype=float32),\n",
-       " array([-990.956, -987.292, -987.44 , ...,  988.152,  987.904,  994.762],\n",
-       "       dtype=float32),\n",
-       " array([ 670.5997 ,  630.90436,  620.20764, ..., -453.41608, -451.7837 ,\n",
-       "         367.4872 ], dtype=float32))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 1.903335 seconds\n"
+     ]
     }
    ],
    "source": [
-    "galpopc.populate_galaxies(\n",
+    "import time\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "x, y, z = galpopc.populate_galaxies(\n",
     "    # Halo arrays\n",
     "    h_mass_log10, h_x, h_y, h_z, h_velocity, h_sigma,\n",
     "    # Subhalo arrays\n",
@@ -92,7 +81,10 @@
     "    13.0, 0.1, 13.5, 1.0, 1.0, 0.0, 1.0,\n",
     "    # Other parameters\n",
     "    True, -1000.0, 1000.0\n",
-    ")"
+    ")\n",
+    "end = time.perf_counter()\n",
+    "\n",
+    "print(f\"Elapsed time: {end - start:.6f} seconds\")"
    ]
   }
  ],
