fixed issue with very long return arrays

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -56,15 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "557e35fc-a6de-4c66-8173-8ebeba519bb8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 1.903335 seconds\n"
+      "Elapsed time: 1.130662 seconds\n"
      ]
     }
    ],
@@ -72,7 +74,7 @@
     "import time\n",
     "\n",
     "start = time.perf_counter()\n",
-    "x, y, z = galpopc.populate_galaxies(\n",
+    "x, y, z, xs, ys, zs = galpopc.populate_galaxies(\n",
     "    # Halo arrays\n",
     "    h_mass_log10, h_x, h_y, h_z, h_velocity, h_sigma,\n",
     "    # Subhalo arrays\n",
@@ -86,6 +88,56 @@
     "\n",
     "print(f\"Elapsed time: {end - start:.6f} seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "107fded8-3fd0-42e2-ae42-e912f7e48a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "872008"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.size(xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2264a2f-ff9d-45cb-bff9-ab9ca9e7317b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59482050"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.size(s_mass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f67b948c-dc4d-4a7c-912e-d6a40ecf40c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
