--- a/demo.ipynb
+++ b/demo.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "557e35fc-a6de-4c66-8173-8ebeba519bb8",
    "metadata": {
     "scrolled": true
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 1.130662 seconds\n"
+      "Elapsed time: 1.559974 seconds\n"
      ]
     }
    ],
@@ -74,13 +74,13 @@
     "import time\n",
     "\n",
     "start = time.perf_counter()\n",
-    "x, y, z, xs, ys, zs = galpopc.populate_galaxies(\n",
+    "x, xs, y, ys, zr, zsr, z, zs = galpopc.populate_galaxies(\n",
     "    # Halo arrays\n",
     "    h_mass_log10, h_x, h_y, h_z, h_velocity, h_sigma,\n",
     "    # Subhalo arrays\n",
     "    s_mass_log10, s_mass, s_velocity, s_n_particles, s_x, s_y, s_z, s_velocity,\n",
     "    # HOD parameters\n",
-    "    13.0, 0.1, 13.5, 1.0, 1.0, 0.0, 1.0,\n",
+    "    12.5, 0.1, 13.5, 1.0, 1.0, 0.0, 1.0,\n",
     "    # Other parameters\n",
     "    True, -1000.0, 1000.0\n",
     ")\n",
@@ -91,50 +91,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "107fded8-3fd0-42e2-ae42-e912f7e48a65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "872008"
+       "array([-101.97296 ,  -19.712122,  165.08601 , ..., -992.6103  ,\n",
+       "       -418.99783 ,  525.1388  ], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.size(xs)"
+    "zr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "e2264a2f-ff9d-45cb-bff9-ab9ca9e7317b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "59482050"
+       "array([-376.084,  201.27 ,  201.278, ...,  133.374, -672.522, -673.204],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.size(s_mass)"
+    "zsr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f67b948c-dc4d-4a7c-912e-d6a40ecf40c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -97.82207 ,  -23.158543,  164.34415 , ..., -997.7888  ,\n",
+       "       -415.7269  ,  525.2798  ], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8657e7df-adad-4a54-83fa-721483035306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-389.0651 ,  210.20073,  201.1452 , ...,  136.62756, -677.96674,\n",
+       "       -668.4564 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "934f1ad3-bd88-414c-927b-04efe9637b0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.9579225 ,  5.9596148 , -0.54115343, ..., -3.0291314 ,\n",
+       "        4.6268167 , -3.3572586 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h_velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d55f00e2-0b4b-49ff-bcc4-483a54426feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-29.712399"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(h_velocity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "291b7228-3397-4f18-b259-de89b564d927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1014.80615"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(z)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67b948c-dc4d-4a7c-912e-d6a40ecf40c9",
+   "id": "601f9ab9-bb7a-48a4-b097-70268c010c13",
    "metadata": {},
    "outputs": [],
    "source": []
